cluster/apps/development/forgejo/ssh-tcproute.yaml
# ---
# apiVersion: gateway.networking.k8s.io/v1alpha2
# kind: TCPRoute
# metadata:
#   name: gitlab-ssh-tcp
#   namespace: gitlab
# spec:
#   parentRefs:
#     - name: traefik
#       sectionName: tcp
#       kind: Gateway
#   rules:
#     - backendRefs:
#         - name: gitlab-gitlab-shell
#           namespace: gitlab
#           port: 22

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: forgejo-ssh
  namespace: development
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: forgejo
          port: 22
